language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_return_mutable_borrow_bad.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_return_mutable_borrow_bad.move:9:9 ───
   │
 9 │         (ref_x_f, ref_x_f_g)
   │         ^^^^^^^^^^^^^^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
   ·
 7 │         let ref_x_f_g = &ref_x_f.g;
   │                         ---------- Field 'g' is still being borrowed by this reference
   │

